# Serenity

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  fly.toml  main.py  privacy.md  pyproject.toml
.github/workflows/: deploy.yml
database/: repository.py  schema.sql
database/migrations/: 001_initial_schema.py  __init__.py
extensions/: core.py
serenity/core/: constants.py  hooks.py  modules.py  types.py
serenity/database/: logging_repository.py  moderation_repository.py  repository.py
serenity/database/migrations/: 001_initial_schema.py  002_module_config.py  003_moderation_tables.py  004_logging_tables.py  __init__.py
serenity/extensions/: admin.py  cases.py  events.py  logging.py  logging_events.py  moderation.py  modules.py  tasks.py  user.py
serenity/services/: __init__.py  logging_service.py  metrics.py  metrics_server.py  moderation_service.py  slowmode_engine.py
services/: __init__.py  slowmode_engine.py
utils/: errors.py  logging.py
